# adenosine

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO  plan.txt
adenosine/: Cargo.toml  README.md
adenosine-cli/: Cargo.toml  README.md  TODO  plan.txt
adenosine-cli/src/: identifiers.rs  lib.rs  main.rs  pretty.rs
adenosine-common/: Cargo.toml  README.md
adenosine-common/src/: lib.rs
adenosine-pds/: Cargo.toml  README.md  plan.txt
adenosine-pds/src/: atp_db.sql  bsky.rs  car.rs  crypto.rs  db.rs  db_bsky.rs  did.rs  lib.rs  models.rs  mst.rs  repo.rs  ucan_p256.rs  web.rs
adenosine-pds/templates/: about.html  account.html  adenosine.css  at_collection.html  at_record.html  at_repo.html  base.html  error.html  home.html  macro.html  post.html  profile.html  robots.txt  thread.html
adenosine-pds/tests/: example_repo.car  test_mst_interop.rs  test_repro_mst.rs
adenosine-tauri-gui/: Cargo.toml  plan.txt  tauri.conf.json
adenosine-tauri-gui/icons/: icon.icns
adenosine-tauri-gui/web/: index.html
adenosine/src/: auth.rs  car.rs  crypto.rs  did.rs  identifiers.rs  ipld.rs  lib.rs  mst.rs  plc.rs  repo.rs  ucan_p256.rs  xrpc.rs
adenosine/src/app_bsky/: mod.rs
adenosine/src/com_atproto/: mod.rs
adenosine/src/com_atproto/repo/: mod.rs
adenosine/tests/: bigger.car  test_mst_interop.rs  test_repro_mst.rs
extra/: HOWTO_release.md  adenosine-pds.1  adenosine-pds.1.md  adenosine-pds.1.scdoc  adenosine-pds.zsh_completions  adenosine.1  adenosine.1.md  adenosine.1.scdoc  adenosine.bash_completions  adenosine.zsh_completions  nginx_example  systemd_unit_example
iroh-car/: Cargo.toml
notes/: atproto_quickstart.md  ipld_car_explore.md  repo_details.md
