[workspace]
members = ["adenosine-cli", "adenosine-tauri-gui"]

[workspace.package]
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.57"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPLv3"
readme = "../README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
