[package]
name = "adenosine-cli"
description = "Simple informal CLI client for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []
default-run = "adenosine"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
structopt = "*"
# NOTE: could try 'rustls-tls' feature instead of default native TLS?
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "*"
base64 = "*"
regex = "*"
lazy_static = "*"

# uncertain about these...
anyhow = "1.0"
atty = "0.2"
colored_json = "*"
termcolor = "*"
log = "*"
env_logger = "*"

[package.metadata.deb]
maintainer = "Bryan Newbold <bnewbold@robocracy.org>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """"TODO"""
assets = [
    ["target/release/adenosine", "usr/bin/", "755"],
    #["../extra/adenosine.1", "usr/share/man/man1/", "644"],
]
