[package]
name = "adenosine-cli"
description = "Simple informal CLI client for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []
default-run = "adenosine"

# common across workspace
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPLv3"
readme = "../README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
structopt = "*"
# NOTE: could try 'rustls-tls' feature instead of default native TLS?
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
base64 = "*"
regex = "*"
lazy_static = "*"
dotenv = "*"
data-encoding = "*"
rand = "*"
time = { version = "*", features = ["formatting"] }

# uncertain about these...
anyhow = "1.0"
atty = "0.2"
colored_json = "*"
termcolor = "*"
log = "*"
env_logger = "*"

[package.metadata.deb]
maintainer = "Bryan Newbold <bnewbold@robocracy.org>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """"This is a simple, enthusiast-grade CLI client for the work-in-progress AT Protocol (atproto.com). It is an entirely \"delegated\" client, which means that it does not store or cache any user content locally; everything works by making HTTP/XRPC requests to a Personal Data Server (PDS), which is usually a remote service."""
assets = [
    ["target/release/adenosine", "usr/bin/", "755"],
    ["../extra/adenosine.1", "usr/share/man/man1/", "644"],
    ["../extra/adenosine.bash_completions", "usr/share/bash-completion/completions/adenosine", "644"],
    ["../extra/adenosine.zsh_completions", "usr/share/zsh/vendor-completions/_adenosine", "644"],
]
