[package]
name = "adenosine-cli"
description = "Simple informal CLI client for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []
default-run = "adenosine"

# common across workspace
version = "0.2.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
adenosine = { version = "0.2.0", path = "../adenosine" }
structopt = "0.3"
# NOTE: could try 'rustls-tls' feature instead of default native TLS?
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
base64 = "0.13"
regex = "1"
lazy_static = "1"
dotenvy = "0.15"
data-encoding = "2"
rand = "0.8"
time = { version = "0.3", features = ["formatting"] }

# uncertain about these...
anyhow = "1"
atty = "0.2"
colored_json = "3"
termcolor = "1"
log = "0.4"
env_logger = "0.7"

[package.metadata.deb]
maintainer = "Bryan Newbold <bnewbold@robocracy.org>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """"This is a simple, enthusiast-grade CLI client for the work-in-progress AT Protocol (atproto.com). It is an entirely \"delegated\" client, which means that it does not store or cache any user content locally; everything works by making HTTP/XRPC requests to a Personal Data Server (PDS), which is usually a remote service."""
assets = [
    ["target/release/adenosine", "usr/bin/", "755"],
    ["../extra/adenosine.1", "usr/share/man/man1/", "644"],
    ["../extra/adenosine.bash_completions", "usr/share/bash-completion/completions/adenosine", "644"],
    ["../extra/adenosine.zsh_completions", "usr/share/zsh/vendor-completions/_adenosine", "644"],
]
