[package]
name = "adenosine-common"
description = "Shared things (eg, types) for adenosine codebase"
keywords = ["atproto"]
categories = []

# common across workspace
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPLv3"
readme = "../README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
structopt = "*"
regex = "*"
lazy_static = "*"
data-encoding = "*"
rand = "*"
anyhow = "1.0"

