[package]
name = "adenosine-pds"
description = "Simple informal personal data server (PDS) for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []

version = "0.2.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
anyhow = "1"
structopt = "0.3"
serde = "1"
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4"
libipld = "0.14"
ipfs-sqlite-block-store = "0.13"
rusqlite = { version = "0.26", features = ["bundled"] }
rusqlite_migration = "1"
# NOTE: lexicon validation not implemented yet
#jsonschema = "*"
#schemafy = "*"
rouille = "3"
# NOTE: vendored for now
#iroh-car = "*"
adenosine = { version = "0.2.0", path = "../adenosine" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1"
bcrypt = "0.13"
data-encoding = "2"
# TODO: replace this with data-encoding or similar; this is only needed for ucan_p256 stuff
async-trait = "0.1"
dotenvy = "0.15"
askama = { version = "0.11", features = ["serde-json"] }

[package.metadata.deb]
maintainer = "Bryan Newbold <bnewbold@robocracy.org>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """Simple informal personal data server (PDS) for AT protocol and bsky.app"""
assets = [
    ["target/release/adenosine-pds", "usr/bin/", "755"],
    ["../extra/adenosine-pds.1", "usr/share/man/man1/", "644"],
    ["../extra/adenosine-pds.bash_completions", "usr/share/bash-completion/completions/adenosine-pds", "644"],
    ["../extra/adenosine-pds.zsh_completions", "usr/share/zsh/vendor-completions/_adenosine-pds", "644"],
]
