[package]
name = "adenosine-pds"
description = "Simple informal personal data server (PDS) for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []

version = "0.3.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
adenosine = { version = "0.3.0", path = "../adenosine" }
anyhow = "1"
askama = { version = "0.11", features = ["serde-json"] }
bcrypt = "0.13"
data-encoding = "2"
dotenvy = "0.15"
#ipfs-sqlite-block-store = "0.13"
lazy_static = "1"
libipld = { version = "0.14", features = ["dag-cbor", "derive"] }
log = "0.4"
pretty_env_logger = "0.4"
rouille = "3"
rusqlite = { version = "0.26", features = ["bundled"] }
rusqlite_migration = "1"
serde = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

[package.metadata.deb]
maintainer = "Bryan Newbold <bnewbold@robocracy.org>"
depends = "$auto"
section = "utility"
priority = "optional"
extended-description = """Simple informal personal data server (PDS) for AT protocol and bsky.app"""
assets = [
    ["target/release/adenosine-pds", "usr/bin/", "755"],
    ["../extra/adenosine-pds.1", "usr/share/man/man1/", "644"],
    ["../extra/adenosine-pds.bash_completions", "usr/share/bash-completion/completions/adenosine-pds", "644"],
    ["../extra/adenosine-pds.zsh_completions", "usr/share/zsh/vendor-completions/_adenosine-pds", "644"],
]
