[package]
name = "adenosine-tauri-gui"
description = "Simple informal GUI client for AT protocol and bsky.app"
#default-run = "adenosine-tauri-gui"
keywords = ["atproto"]
categories = []

version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPLv3"
readme = "../README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
