[package]
name = "adenosine"
description = "Common libraries for AT protocol and bsky.app"
keywords = ["atproto"]
categories = []

# common across workspace
version = "0.2.0"
edition = "2021"
rust-version = "1.61"
authors = ["Bryan Newbold <bnewbold@robocracy.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/bnewbold/adenosine"

[dependencies]
# NOTE: could try 'rustls-tls' feature instead of default native TLS?
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bs58 = "0.4"
data-encoding = "2"
futures = "0.3"
ipfs-sqlite-block-store = "0.13"
lazy_static = "1"
libipld = { version = "0.14", features = ["dag-cbor", "derive"] }
log = "0.4"
multibase = "0.9"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha256 = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }

# crypto/auth stuff
k256 = { version = "0.11", features = ["ecdsa"] }
p256 = { version = "0.11", features = ["ecdsa"] }
ucan = "0.7.0-alpha.1"

# for vendored iroh-car
integer-encoding = { version = "3", features = ["tokio_async"] }
multihash = "0.16"
thiserror = "1.0"
